ci: fix brew install not working when deploying sdk

--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -27,12 +27,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # Note: Before you run 'brew', you must enable brew.
       # https://github.com/actions/runner-images/blob/main/images/linux/Ubuntu2204-Readme.md#homebrew-note
-      - name: Enable homebrew for Linux to install tools with 
-        run: eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" 
-
       - name: Install tools used in workflow 
         run: |
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" # enable brew on the machine
           brew install sd # CLI to replace strings in files 
 
       # Semantic-release tool is used to:
