--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -48,11 +48,18 @@ jobs:
     permissions:
       pull-requests: write # comment on pull request with build information 
     strategy:
+      fail-fast: false # if one sample app fails to build, let the other sample apps continue to build and not cancel them. 
       matrix: # Use a matrix allowing us to build multiple apps in parallel. Just add an entry to the matrix and it will build! 
         sample-app: 
         # List all sample apps you want to have compiled. 
         # List item is name of directory inside of "Apps" directory for the corresponding app to compile. 
         - "CocoaPods-FCM"
+        - "APN-UIKit"
+        include: # Add additional variables to each sample app build: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstrategymatrixinclude
+          - sample-app: "APN-UIKit"
+            apn-or-fcm: APN
+          - sample-app: "CocoaPods-FCM"
+            apn-or-fcm: FCM
 
     runs-on: macos-13
     name: Building app...${{ matrix.sample-app }}
@@ -80,12 +87,19 @@ jobs:
         ruby-version: '3.0'
         bundler-cache: true # cache tools to make builds faster in future 
     
-    - name: Setup build environment to prepare for building 
-      working-directory: ${{ env.GITHUB_WORKSPACE }} # root directory of source code 
+    - name: Setup APN build environment to prepare for building
+      if: ${{ matrix.apn-or-fcm == 'APN' }}
       run: |
         make setup_sample_app app=${{ matrix.sample-app }}
-        sd CUSTOMERIO_WORKSPACE_SITE_ID ${{ secrets.CUSTOMERIO_WORKSPACE_SITE_ID }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
-        sd CUSTOMERIO_WORKSPACE_API_KEY ${{ secrets.CUSTOMERIO_WORKSPACE_API_KEY }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
+        sd CUSTOMERIO_WORKSPACE_SITE_ID ${{ secrets.CUSTOMERIO_APN_WORKSPACE_SITE_ID }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
+        sd CUSTOMERIO_WORKSPACE_API_KEY ${{ secrets.CUSTOMERIO_APN_WORKSPACE_API_KEY }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
+
+    - name: Setup FCM build environment to prepare for building
+      if: ${{ matrix.apn-or-fcm == 'FCM' }}
+      run: |
+        make setup_sample_app app=${{ matrix.sample-app }}
+        sd CUSTOMERIO_WORKSPACE_SITE_ID ${{ secrets.CUSTOMERIO_FCM_WORKSPACE_SITE_ID }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
+        sd CUSTOMERIO_WORKSPACE_API_KEY ${{ secrets.CUSTOMERIO_FCM_WORKSPACE_API_KEY }} "Apps/${{ matrix.sample-app }}/BuildEnvironment.swift"
 
     - name: Does ${{ matrix.sample-app }} use CocoaPods? 
       id: check_podfile_exists
@@ -103,7 +117,6 @@ jobs:
           ${{ runner.os }}-${{ matrix.sample-app}}-Pods
 
     - name: Run pod install if using CocoaPods 
-      working-directory: ${{ env.GITHUB_WORKSPACE }} # root directory of source code 
       if: steps.check_podfile_exists.outputs.files_exists == 'true'
       run: make install_cocoapods_dependencies app=CocoaPods-FCM
 
