--- a/Apps/APN-UIKit/APN UIKit/APN UIKit.entitlements
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:ciosample.page.link/spm</string>
+	</array>
 </dict>
 </plist>
