--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -1,6 +1,6 @@
 name: Deploy SDK
 
-on:
+on:  
   workflow_dispatch: # manually run this workflow. This allows you to manually deploy things like cococapods, not manually create a git tag. The tag needs to already be created to run this. 
     inputs:
       existing-git-tag:
@@ -26,13 +26,11 @@ jobs:
       new_release_version: ${{ steps.semantic-release.outputs.new_release_version }}
     steps:
       - uses: actions/checkout@v3
-
-      # Note: Before you run 'brew', you must enable brew.
-      # https://github.com/actions/runner-images/blob/main/images/linux/Ubuntu2204-Readme.md#homebrew-note
-      - name: Install tools used in workflow 
-        run: |
-          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" # enable brew on the machine
-          brew install sd # CLI to replace strings in files 
+    
+      # CLI to replace strings in files. The CLI recommends using `cargo install` which is slow. This Action is fast because it downloads pre-built binaries. 
+      # If using sd on macos, "brew install" works great. for Linux, this is the recommended way. 
+      - name: Install sd CLI to use later in the workflow 
+        uses: kenji-miyake/setup-sd@v1
 
       # Semantic-release tool is used to:
       # 1. Determine the next semantic version for the software during deployment.
