--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -2,6 +2,8 @@ name: Build sample apps
 
 on: 
   pull_request: # build sample apps for every commit pushed to an open pull request (including drafts)
+  push: 
+    branches: [main]
   release: # build sample apps for every git tag created. These are known as "stable" builds that are suitable for people outside the mobile team. 
     types: [published]
 
@@ -66,11 +68,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install tools used in workflow
-      run: |
-        brew install xcbeautify    
-        brew install sd
-
     - name: Set up Xcode to version we determine 
       uses: maxim-lobanov/setup-xcode@v1
       with:
@@ -120,8 +117,8 @@ jobs:
       if: steps.check_podfile_exists.outputs.files_exists == 'true'
       run: make install_cocoapods_dependencies app=CocoaPods-FCM
 
-      # - name: Dump GitHub Action metadata because Fastlane uses it. Viewing it here helps debug JSON parsing code in Firebase. 
-    #   run: cat $GITHUB_EVENT_PATH
+    - name: Dump GitHub Action metadata because Fastlane uses it. Viewing it here helps debug JSON parsing code in Firebase. 
+      run: cat $GITHUB_EVENT_PATH
 
     - name: Build app via Fastlane 
       uses: maierj/fastlane-action@v3.0.0
