ci: allow manually building sample apps

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -4,6 +4,7 @@ on:
   pull_request: # build sample apps for every commit pushed to an open pull request (including drafts)
   push: 
     branches: [main]
+  workflow_dispatch: # allow manual run     
 
 concurrency: # cancel previous workflow run if one exists. 
   group: ${{ github.workflow }}-${{ github.ref }}
