--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -7,11 +7,18 @@ sdk_local_path = File.join(File.dirname(__FILE__), '../../')
 target 'test cocoapods' do
   pod 'CustomerIOCommon', :path => sdk_local_path
   pod 'CustomerIOTracking', :path => sdk_local_path
-  pod 'CustomerIOMessagingPush', :path => sdk_local_path
-  pod 'CustomerIOMessagingPushFCM', :path => sdk_local_path
+  pod 'CustomerIOMessagingPush', :path => sdk_local_path    
   pod 'CustomerIOMessagingInApp', :path => sdk_local_path
+  pod 'CustomerIOMessagingPushFCM', :path => sdk_local_path
 
-  pod 'FirebaseMessaging', '~> 10.6'
+  # The "CustomerIOMessagingPushFCM" SDK installs the FCM SDK for you, defaulting to the latest version. 
+  # If your app needs to use a specific version of the FCM SDK, you can add the line below to your app's Podfile 
+  # and the version you specify will override the version in the "CustomerIOMessagingPushFCM" SDK. 
+  # 
+  # pod 'FirebaseMessaging', '~> 10.6'
+  # 
+  # See docs to learn the Podfile syntax for specifying version numbers:
+  # https://guides.cocoapods.org/syntax/podfile.html#pod
 
   pod 'SampleAppsCommon', :path => File.join(File.dirname(__FILE__), '../Common')
 end
