--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,10 +3,20 @@ name: Lint
 on: [pull_request]
 
 jobs:
+  assert-formatted:
+    name: Assert that code has been linted and formatted before merging
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install swiftformat 
+        run: brew install swiftformat || brew upgrade swiftformat 
+      - name: Run swiftformat. Fail if any errors. 
+        run: make format && git diff --exit-code
+
   SwiftLint:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install swiftlint 
         run: brew install swiftlint || brew upgrade swiftlint 
       - name: Run swiftlint. Fail if any errors. 
