push metrics sample app

--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -28,4 +28,6 @@ target 'Rich Push Notification Service Extension' do
   pod 'CustomerIOTracking', :path => sdk_local_path
   pod 'CustomerIOMessagingPush', :path => sdk_local_path
   pod 'CustomerIOMessagingPushFCM', :path => sdk_local_path
+
+  pod 'SampleAppsCommon', :path => File.join(File.dirname(__FILE__), '../Common')
 end 
