--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -139,7 +139,7 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         # the variables APP_BUILD_NUMBER, APP_VERSION_STRING are created when fastlane runs "build". 
         body: |
-          * ${{ matrix.sample-app }}: `${{ env.APP_VERSION_STRING }} (${{ env.APP_BUILD_NUMBER }})`
+          * ${{ matrix.sample-app }}, Xcode ${{ matrix.xcode-version }}: `${{ env.APP_VERSION_STRING }} (${{ env.APP_BUILD_NUMBER }})`
         edit-mode: append # append new line to the existing PR comment to build a list of all sample app builds. 
 
     - name: Update sample builds PR comment with build failure message 
@@ -149,5 +149,5 @@ jobs:
         comment-id: ${{ needs.update-pr-comment.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          * ${{ matrix.sample-app }}: Build failed. See [CI job logs](https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}) to determine the issue and try re-building. 
+          * ${{ matrix.sample-app }}, Xcode ${{ matrix.xcode-version }}: Build failed. See [CI job logs](https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}) to determine the issue and try re-building. 
         edit-mode: append # append new line to the existing PR comment to build a list of all sample app builds. 
