--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -50,7 +50,7 @@ jobs:
       pull-requests: write # comment on pull request with build information 
     strategy:
       fail-fast: false # if one sample app fails to build, let the other sample apps continue to build and not cancel them. 
-      matrix: # Use a matrix allowing us to build multiple apps in parallel. Just add an entry to the matrix and it will build! 
+      matrix: # Use a matrix allowing us to build multiple apps in parallel. Just add an entry to the matrix and it will build!
         sample-app: 
         # List all sample apps you want to have compiled. 
         # List item is name of directory inside of "Apps" directory for the corresponding app to compile. 
@@ -67,10 +67,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Xcode to version we determine 
+    - name: Set up Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: 14
+        xcode-version: "15.0-beta"
 
     - name: Install CLI tools used in CI script 
       run: |
