--- a/lefthook.yml
+++ b/lefthook.yml
@@ -14,4 +14,5 @@ pre-push:
   commands:
     lint: 
       # Run linter giving you errors to fix. 
-      run: make lint
+      # By using `|| echo "..."`, we do not block you from pushing code. Running lint in a git hooks is to warn you about lint errors early, but not block you from pushing code with errors if you decide to push.
+      run: make lint || echo -e "\n\n ⚠️  Linting contains errors that will prevent you from merging a pull request. Fix errors above if you are planning on making a pull request."
