ci: set workaround for semantic-release issue skipping deployment

--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -50,8 +50,9 @@ jobs:
         uses: cycjimmy/semantic-release-action@v3
         id: semantic-release
         with:
+          # Hard-coding version as workaround https://github.com/semantic-release/commit-analyzer/issues/517#issuecomment-1697193361
           extra_plugins: |
-            conventional-changelog-conventionalcommits
+            conventional-changelog-conventionalcommits@6.1.0
             @semantic-release/changelog
             @semantic-release/git
             @semantic-release/github
