--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,8 @@ jobs:
       with:
         xcode-version: ${{ matrix.xcode }}
     # If running tests fails, sometimes it's because of scheme name is wrong. This gives us all available schemes. 
-    - name: Get XCode schemes (xcode ${{ matrix.xcode }})
-      run: xcrun xcodebuild -list
+    # - name: Get XCode schemes (xcode ${{ matrix.xcode }})
+    #   run: xcrun xcodebuild -list
 
     - name: Setup Ruby to run Fastlane 
       uses: ruby/setup-ruby@v1
@@ -46,13 +46,13 @@ jobs:
       run: ./scripts/generate-code-coverage-report.sh 
   
       # Disable uploading code coverage for now until we investigate the 500 errors we're getting from Codecov.
-    # - name: Upload code coverage report 
-    #   uses: codecov/codecov-action@v2
-    #   with: 
-    #     token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} # not required for public repos, but sometimes uploads fail without it so include it anyway
-    #     fail_ci_if_error: true # fail if upload fails so we can catch it and fix it right away.
-    #     verbose: true 
-    #     directory: .build/generated
+    - name: Upload code coverage report 
+      uses: codecov/codecov-action@v2
+      with: 
+        token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} # not required for public repos, but sometimes uploads fail without it so include it anyway
+        fail_ci_if_error: true # fail if upload fails so we can catch it and fix it right away.
+        verbose: true 
+        directory: .build/generated
 
     - name: Upload test report 
       uses: actions/upload-artifact@v3
