--- a/.github/workflows/pr-helper.yml
+++ b/.github/workflows/pr-helper.yml
@@ -1,18 +1,13 @@
-name: Semantic PR helper 
+name: Semantic PR helper
 
 on:
   pull_request:
     types: [opened, reopened, edited, synchronize, labeled]
 
-permissions:
-  pull-requests: write # Write access needed to create a comment.
-
 jobs:
-  pr-help:
-    name: Semantic PR helper 
+  lint-pr-title:
     runs-on: ubuntu-latest
-    steps:
-      - name: Semantic PR helper 
-        uses: levibostian/action-semantic-pr@v4
-        with:
-          readToken: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      pull-requests: write # to comment on PRs
+    steps:    
+    - uses: levibostian/action-conventional-pr-linter@v4
