ci: enable codecov uploading again (#384)

--- a/codecov.yml
+++ b/codecov.yml
@@ -14,3 +14,10 @@ coverage:
     project:
       default:
         informational: true 
+
+# The file that contains code coverage information may contain coverage for files that we do not want to keep track of. 
+# Example: We do not want to know the coverage for the Tests/ directory because that does not contain source code of our SDK. 
+# https://docs.codecov.com/docs/ignoring-paths
+ignore: 
+  - "Tests" # ignore code coverage of Test/ files 
+  - "**/*.generated.swift" # Ignore code coverage of generated files.
