--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,18 +41,19 @@ jobs:
       with:
         lane: 'scan'
 
-    # Read generate script file to learn more about this CI step. 
-    - name: Generate code coverage report from .xcresult/
-      run: ./scripts/generate-code-coverage-report.sh 
+    # https://about.codecov.io/blog/pre-converting-xcresult-files-for-codecov-using-xcresultparser/
+    - name: Generate code coverage report from .xcresult/ that can be converted to codecov format
+      run: |
+        brew tap a7ex/homebrew-formulae && brew install xcresultparser
+        xcresultparser --output-format cobertura "Customer.io-Package.xcresult" > ".build/coverage.xml"
   
-      # Disable uploading code coverage for now until we investigate the 500 errors we're getting from Codecov.
-    # - name: Upload code coverage report 
-    #   uses: codecov/codecov-action@v2
-    #   with: 
-    #     token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} # not required for public repos, but sometimes uploads fail without it so include it anyway
-    #     fail_ci_if_error: true # fail if upload fails so we can catch it and fix it right away.
-    #     verbose: true 
-    #     directory: .build/generated
+    - name: Upload code coverage report 
+      uses: codecov/codecov-action@v3
+      with: 
+        token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} # not required for public repos, but sometimes uploads fail without it so include it anyway
+        files: .build/coverage.xml
+        fail_ci_if_error: true # fail if upload fails so we can catch it and fix it right away.
+        verbose: true 
 
     - name: Upload test report 
       uses: actions/upload-artifact@v3
