--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Set up Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: "15.0-beta"
+        xcode-version: "15"
 
     - name: Install CLI tools used in CI script 
       run: |
