update to xcode 15 for tests, too

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -62,15 +62,11 @@ jobs:
           - sample-app: "CocoaPods-FCM"
             apn-or-fcm: FCM
 
-    runs-on: macos-13
+    runs-on: macos-latest
     name: Building app...${{ matrix.sample-app }}
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up Xcode
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: "15"
+    - uses: ./.github/actions/setup-ios
 
     - name: Install CLI tools used in CI script 
       run: |
