--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,28 +6,17 @@ concurrency: # cancel previous workflow run if one exists.
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-# Thanks, https://swiftpackageindex.com/docs/builds for help coming up with *how* we build the artifacts. Swift build on Linux, XCode build on mac. Changing the XCode version to a specific version is how to set what version of Swift we want to test against on macOS. This is more real-world but also because I encountered issues with trying to install a Swift version in the macOS environment and try to run tests on it. 
-# See example commands by choosing a package: https://swiftpackageindex.com/nativedevbr/swift-log/builds and viewing the build information for each environment to see the commands run in that environment. 
-
 jobs:
-  xcode-test:
-    strategy:
-      matrix:
-        # 13.3 = swift 5.6
-        # Thanks: https://swiftly.dev/swift-versions, https://xcodereleases.com/, https://github.com/actions/virtual-environments/blob/main/images/macos/macos-12-Readme.md#xcode
-        xcode: ["14.3"]
-    runs-on: macos-13
-    name: XCode macOS tests (xcode ${{ matrix.xcode }})
+  automated-tests:
+    runs-on: macos-latest
+    name: XCode macOS tests 
     permissions:
       checks: write # Need write permission to add test result check.
     steps:
     - uses: actions/checkout@v4
-    - name: Set up XCode
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: ${{ matrix.xcode }}
+    - uses: ./.github/actions/setup-ios
     # If running tests fails, sometimes it's because of scheme name is wrong. This gives us all available schemes. 
-    - name: Get XCode schemes (xcode ${{ matrix.xcode }})
+    - name: Get XCode schemes 
       run: xcrun xcodebuild -list
 
     - name: Setup Ruby to run Fastlane 
@@ -36,7 +25,7 @@ jobs:
         ruby-version: '3.0'
         bundler-cache: true # install dependencies in Gemfile, including Fastlane. 
 
-    - name: Run tests (xcode ${{ matrix.xcode }})
+    - name: Run tests 
       uses: maierj/fastlane-action@v3.0.0
       with:
         lane: 'scan'
@@ -64,7 +53,7 @@ jobs:
     - name: Publish test results
       uses: mikepenz/action-junit-report@v4      
       with:
-        check_name: XCode macOS tests (xcode ${{ matrix.xcode }}) - Results
+        check_name: XCode macOS tests - Results
         report_paths: test-report.xml
         github_token: ${{ secrets.GITHUB_TOKEN }}
         fail_on_failure: true
