--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -13,8 +13,6 @@ on:
 
 permissions:
   contents: write # access to push the git tag
-  issues: write # Bot creates an issue if there is an issue during deployment process
-  pull-requests: write # allow bot to make comments on PRs after they get deployed
 
 jobs:
   deploy-git-tag:
@@ -31,12 +29,6 @@ jobs:
       # If using sd on macos, "brew install" works great. for Linux, this is the recommended way. 
       - name: Install sd CLI to use later in the workflow 
         uses: kenji-miyake/setup-sd@v1
-
-      # once this issue is resolved, we can remove this workaround. https://github.com/cycjimmy/semantic-release-action/issues/159#issuecomment-1490892625
-      - name: Workaround for latest cycjimmy/semantic-release-action v3 throwing error while executing 
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
 
       # Semantic-release tool is used to:
       # 1. Determine the next semantic version for the software during deployment.
@@ -141,7 +133,7 @@ jobs:
     if: ${{ needs.deploy-git-tag.outputs.new_release_published == 'true' || github.event_name == 'workflow_dispatch' }}
     env:
       COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}    
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
       - name: Checkout git tag that got created in previous step 
         uses: actions/checkout@v4
@@ -153,7 +145,9 @@ jobs:
         uses: actions/checkout@v4
         if: ${{ github.event_name == 'workflow_dispatch' }}
         with:
-          ref: ${{ inputs.existing-git-tag }}
+          ref: ${{ inputs.existing-git-tag }}  
+
+      - uses: ./.github/actions/setup-ios
 
       - name: Install cocoapods 
         run: gem install cocoapods
