--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 name: Tests
 
-on: [pull_request]
+on: 
+  pull_request:
+  push:
+    branches: [main] # code coverage reporting needs to be on main so all PRs can compare against it. 
 
 concurrency: # cancel previous workflow run if one exists. 
   group: ${{ github.workflow }}-${{ github.ref }}
