replace broken action with fork

--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -26,9 +26,10 @@ jobs:
       - uses: actions/checkout@v4
     
       # CLI to replace strings in files. The CLI recommends using `cargo install` which is slow. This Action is fast because it downloads pre-built binaries. 
-      # If using sd on macos, "brew install" works great. for Linux, this is the recommended way. 
+      # If using sd on macos, "brew install" works great. for Linux, this is the recommended way.       
       - name: Install sd CLI to use later in the workflow 
-        uses: kenji-miyake/setup-sd@v1
+        # uses: kenji-miyake/setup-sd@v1
+        uses: levibostian/setup-sd@add-file-extension # Using fork until upstream Action has bug fixed in it. 
 
       # Semantic-release tool is used to:
       # 1. Determine the next semantic version for the software during deployment.
