ci: setup semantic-release for v2 deployments
To continue supporting v2 of our SDK, this commit configures the semantic-release deployment tool to create 2.x deployments when we make new merges into v2 branch.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,6 +2,7 @@
     "tagFormat": "${version}",
     "branches": [
         "main",
+        { "name": "v2", "range": "2.x" },
         { "name": "beta", "prerelease": true },
         { "name": "alpha", "prerelease": true }
     ],
